giriş sayfası yapıldı. Navbarda değişiklikler yapıldı.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/">Anasayfa</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Tüm Kitaplar</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Kitaplar
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Kategoriler</a></li>
+                  <li><a class="dropdown-item" href="#">En Çok Okunanlar</a></li>   
+                  <li><a class="dropdown-item" href="#">Yeni Çıkanlar</a></li>
+                </ul>
               </li>
             
             </ul>
