kayit sayfası oluşturuldu. kitapdetayi seyfasi oluşturuldu, tamamlanmadı.

--- a/kitapdetay.html
+++ b/kitapdetay.html
@@ -85,44 +85,11 @@
       </div>
     </nav>
 
-    <div
-      class="giris-kapsayici arkaplan4 m-auto col-xl-5 col-lg-5 col-md-6 col-sm-10 col-xs-10 py-4 mt-5 mb-5 pb-5"
-    >
-      <h2 class="text-center mb-5 mt-3">GİRİŞ YAP</h2>
-      <div class="giris-yap col-10 m-auto my-4">
-        <form>
-          <div class="form-group row">
-            <label for="inputEmail3" class="col-sm-3 col-form-label"
-              >Kullanıcı Adı</label
-            >
-            <div class="col-sm-9">
-              <input
-                type="username"
-                class="form-control"
-                id="inputUsername"
-                placeholder="Kullanıcı Adı"
-              />
-            </div>
-          </div>
-          <div class="form-group row my-4">
-            <label for="inputPassword3" class="col-sm-3 col-form-label"
-              >Şifre</label
-            >
-            <div class="col-sm-9">
-              <input
-                type="password"
-                class="form-control"
-                id="inputPassword3"
-                placeholder="Şifre"
-              />
-            </div>
-          </div>
-
-          <div class="giris-kayit-buton text-center mt-4 column">
-            <button type="submit" class="btn btn-info">Giriş Yap</button>
-            <a class="kayit-ol" href="/kayit.html">Kayıt ol!</a>
-          </div>
-        </form>
+    <div class="kapsayici">
+      <div class="fotokapsa">
+        <div class="foto">foto</div>
+        <div class="favekle">favekle</div>
+        <div class="listeyeekle">Daha sonra okuyacağım</div>
       </div>
     </div>
 
