kitap detay sayfası tamamlandı

--- a/hesabim.html
+++ b/hesabim.html
@@ -85,8 +85,8 @@
       </div>
     </nav>
 
-    <div class="kapsayici">
-
+    <div class="kapsayici border m-auto col-10 mt-4">
+g
         
     </div>
 
