--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link justify-content-end text-white" href="#"
+              <a class="nav-link justify-content-end text-white" href="hesabim.html"
                 >Hesabım</a
               >
             </li>
@@ -103,7 +103,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -121,7 +121,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -138,7 +138,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -155,7 +155,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -172,7 +172,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -189,7 +189,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -206,7 +206,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -223,7 +223,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -247,7 +247,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -265,7 +265,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -282,7 +282,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -299,7 +299,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -316,7 +316,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -333,7 +333,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -350,7 +350,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -367,7 +367,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -391,7 +391,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -409,7 +409,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -426,7 +426,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -443,7 +443,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -460,7 +460,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -477,7 +477,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -494,7 +494,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
@@ -511,7 +511,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Kürk Mantolu Madonna</h5>
               <div class="buton-kapsayici text-center mt-3">
-                <a href="#" class="btn btn-primary">KİTABI İNCELE</a>
+                <a href="/kitapdetay.html" class="btn btn-primary">KİTABI İNCELE</a>
               </div>
             </div>
           </div>
