--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="container-fluid mx-md-5 mx-lg-5 mx-sm-5">
         <a class="navbar-brand" href="#">Kitaplık</a>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler bg-white text-secondary"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent"
